--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -163,7 +163,7 @@
     <div class="page-width">
       <div class="grid medium-up--grid--table">
         <div class="grid__item medium-up--one-half">
-          <small>&copy; {{ 'now' | date: "%Y" }}, {{ shop.name | link_to: '/' }}. {{ powered_by_link }}</small>
+          <small>&copy; {{ 'now' | date: "%Y" }}, {{ shop.name | link_to: '/' }}</small>
         </div>
         <div class="grid__item medium-up--one-half medium-up--text-right">
           {% unless shop.enabled_payment_types == empty %}
