--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -278,7 +278,7 @@
                     </a>
                     {{ 'layout.customer.log_out' | t | customer_logout_link }}
                   {% else %}
-                    {{ 'layout.customer.account' | t | customer_login_link }}
+                    {{ 'layout.customer.login' | t | customer_login_link }}
                   {% endif %}
                 </div>
               {% endif %}
