--- a/assets/custome.scss
+++ b/assets/custome.scss
@@ -158,10 +158,14 @@ a.footer__linklist-link{
   margin: 10px 0px 10px 0px !important;
 }
 .site-header__logo a:hover img {
-  -moz-transform: scale(1.05);
-   -ms-transform: scale(1.05);
-   -webkit-transform: scale(1.05);
-   transform: scale(1.05)
+  -moz-transform: scale(1.15);
+   -ms-transform: scale(1.15);
+   -webkit-transform: scale(1.15);
+   transform: scale(1.15)
+}
+#collection-list-grid .featured-card{
+  padding: 0px !important;
+  max-height: 420px !important;
 }
 .featured-card {
     display: block;
@@ -181,8 +185,8 @@ a.footer__linklist-link{
     top: 0;
     right: 0;
     left: 0;
-    max-width: 320px !important;
     width: 100%;
+    max-height: 280px;
 }
 .reason-to-buy {
     text-align: center;
@@ -231,6 +235,7 @@ a.footer__linklist-link{
     margin: 0;
     vertical-align: top;
     font-size: 1rem;
+    font-family: Open Sans;
 }
 .reason-to-buy-wrapper .grid__cell {
     padding: 0 10px;
@@ -305,8 +310,84 @@ a.footer__linklist-link{
     display: none;
 }
 .product-card__image-wrapper {
+    height: 235px;
+    margin-bottom: 60px;
+}
+.product-card__image-wrapper {
     overflow: hidden;
     position: relative;
+}
+.product-card .first {
+    overflow: hidden;
+    position: relative;
+    top: 0;
+    width: 100%;
+}
+.product-card:hover .first{
+  opacity: 0;
+}
+.product-card:hover .second{
+  opacity: 1;
+}
+.second {
+    left: 0;
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 100%;
+}
+.price-sale, .price-dont-sale{
+  margin-top: 0.25rem;
+}
+.price-sale .money{
+  color: #ff9c42;
+    font-size: 18px !important;
+      line-height: 1.4375rem;
+}
+.price-dont-sale .money{
+  color: #0a92b2;
+  font-size: 18px !important;
+    line-height: 1.4375rem;
+}
+.money{
+  margin-top: 0.125rem;
+  display: block;
+  width: 100%;
+}
+.product-card__regular-price .money{
+  margin-top: 0.125rem;
+  display: block;
+  font-size: 0.8125rem !important;
+  line-height: 1.38;
+  color: #33343b;
+}
+.drawer__nav-link--top-level {
+    font-size: 1.25em;
+}
+.template-index .page-width{
+      max-width: 1400px;
+}
+.content-block {
+    font-size: 100%;
+    font-weight: 400;
+    font-family: Open Sans;
+    color: #585858;
+        line-height: 2;
+}
+.rte ul {
+    padding-left: 0;
+    margin-left: 26px;
+}
+.rte p, .rte ul, .rte ol, .rte .button-group {
+    margin-bottom: 22px;
+}
+.rich-text__heading--large {
+  font-weight: 700;
+  font-family: "Avant Garde",Avantgarde,"Century Gothic",CenturyGothic,"AppleGothic",sans-serif;
+  color: #161e26;
+  margin: 0 0 28px 0;
+  text-align: center;
 }
 @media (max-width: 425px){
   .reason-to-buy-wrapper .grid__cell {
@@ -315,16 +396,33 @@ a.footer__linklist-link{
   .reason-to-buy-inner {
     flex-wrap: wrap;
     margin: 0px;
+  }
 }
+@media (max-width: 749px){
+  #collection-list-grid .featured-card--contain .featured-card__header {
+    height: 10px !important;
+}
+  #collection-list-grid .featured-card{
+    padding: 20px !important;
+    max-height: 380px !important;
+  }
 }
 @media only screen and (max-width: 400px){
   .small--one-quarter {
       width: 15%;
   }
+  #collection-list-grid .featured-card{
+    padding: 40px !important;
+    width: 380px !important;
+    height: 380px !important;
+  }
 }
 @media screen and (min-width: 500px){
   .footer__title {
       font-size: 14px;
+  }
+  .page__title {
+    font-size: 40px;
   }
   .footer {
     font-size: 13px;
@@ -340,6 +438,12 @@ a.footer__linklist-link{
     padding-left: 30px !important;
     padding-right: 30px !important;
   }
+  .rte p, .rte ul, .rte ol, .rte .button-group {
+    margin-bottom: 26px;
+  }
+  html {
+    font-size: 15px;
+}
 }
 @media only screen and (min-width: 700px){
   #SiteNav {
@@ -348,6 +452,14 @@ a.footer__linklist-link{
   }
   .page-width {
       padding: 0 0px;
+  }
+}
+@media only screen and (min-width: 750px){
+  .grid--uniform .large-up--one-fifth:nth-child(5n+1), .grid--uniform .medium-up--one-thid:nth-child(5n+1){
+      clear: both;
+  }
+  .grid--uniform .medium-up--one-third:nth-child(3n+1) {
+      clear: none !important;
   }
 }
 @media only screen and (min-width: 768px){
@@ -373,5 +485,13 @@ a.footer__linklist-link{
   }
   .footer__module:last-child {
     padding-right: 0;
+  }
+  .page__title {
+    font-size: 50px;
+  }
+}
+@media screen and (min-width: 1025px){
+  html {
+      font-size: 16px;
   }
 }
